<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.perry.handler.BasicUseActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="post"
        android:text="@string/postUIThread" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postDelayed"
        android:text="@string/postDelayed" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postAtTime"
        android:text="@string/postAtTime" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="postAtFrontOfQueue"
        android:text="@string/postAtFrontOfQueue" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/sendMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendEmptyMessage"
        android:text="@string/sendEmptyMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessageDelayed"
        android:text="@string/sendMessageDelayed" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessageAtTime"
        android:text="@string/sendMessageAtTime" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessageAtFrontOfQueue"
        android:text="@string/sendMessageAtFrontOfQueue" />
</LinearLayout>
